cli/crates/cli/tests/snapshots/owner__global__todo__get.snap
---
source: crates/cli/tests/owner.rs
expression: "client.gql::<Value>(OWNER_TODO_GET).bearer(USER1).variables(json!({\n                \"id\" : id\n            })).send()"
---
{
  "data": {
    "todo": {
      "title": "1",
      "complete": false
    }
  }
}
