cli/crates/cli/tests/snapshots/owner__global__todo__list-empty.snap
---
source: crates/cli/tests/owner.rs
expression: "client.gql::<Value>(OWNER_TODO_LIST).bearer(USER2).send()"
---
{
  "data": {
    "todoCollection": {
      "edges": []
    }
  }
}
