cli/crates/cli/tests/snapshots/owner__global__todo__list-fail.snap
---
source: crates/cli/tests/owner.rs
expression: "client.gql::<Value>(OWNER_TODO_LIST).bearer(USER1).send()"
---
{
  "data": null,
  "errors": [
    {
      "message": "Unauthorized to access Query.todoCollection (missing list operation)"
    }
  ]
}
