cli/crates/cli/tests/snapshots/owner__global__todo__list.snap
---
source: crates/cli/tests/owner.rs
expression: "client.gql::<Value>(OWNER_TODO_LIST).bearer(ADMIN).send()"
---
{
  "data": {
    "todoCollection": {
      "edges": [
        {
          "node": {
            "complete": false,
            "title": "1"
          }
        }
      ]
    }
  }
}
