cli/crates/cli/tests/snapshots/owner__global__todo__user1-create.snap
---
source: crates/cli/tests/owner.rs
expression: todo_created
---
{
  "data": {
    "todoCreate": {
      "todo": {
        "id": "[id]",
        "title": "1",
        "complete": false
      }
    }
  }
}
