cli/crates/cli/tests/snapshots/owner__global__todo__user1-delete.snap
---
source: crates/cli/tests/owner.rs
expression: "client.gql::<Value>(OWNER_TODO_DELETE).bearer(USER1).variables(json!({\n                \"id\" : id\n            })).send()"
---
{
  "data": {
    "todoDelete": {
      "__typename": "TodoDeletePayload"
    }
  }
}
