cli/crates/cli/tests/snapshots/owner__global__todo__user1-list-2.snap
---
source: crates/cli/tests/owner.rs
expression: "client.gql::<Value>(OWNER_TODO_LIST).bearer(USER1).send()"
---
{
  "data": {
    "todoCollection": {
      "edges": [
        {
          "node": {
            "complete": true,
            "title": "1"
          }
        }
      ]
    }
  }
}
