cli/crates/cli/tests/snapshots/owner__global__todo__user1-list.snap
---
source: crates/cli/tests/owner.rs
expression: "client.gql::<Value>(OWNER_TODO_LIST).bearer(USER1).send()"
---
{
  "data": {
    "todoCollection": {
      "edges": [
        {
          "node": {
            "title": "1",
            "complete": false
          }
        }
      ]
    }
  }
}
