cli/crates/cli/tests/snapshots/owner__global__todo__user2-get-fail.snap
---
source: crates/cli/tests/owner.rs
expression: "client.gql::<Value>(OWNER_TODO_GET).bearer(USER2).variables(json!({\n                \"id\" : id\n            })).send()"
---
{
  "data": {
    "todo": null
  }
}
